# AccountLinker

./: .gitignore  CMakeLists.txt  config.cpp  config.h  main.cpp  menu.cpp  menu.h  qr.h  utils.cpp
data/: CMakeLists.txt
gui/: CMakeLists.txt  gettext.cpp  gettext.h  gui.h  gui_button.cpp  gui_element.cpp  gui_image.cpp  gui_imagedata.cpp  gui_text.cpp  gui_trigger.cpp  gui_window.cpp  input.cpp  input.h  pngu.cpp  pngu.h
